--- a/public/index.html
+++ b/public/index.html
@@ -26,18 +26,37 @@
             <div class="line3"></div>
         </div>
     </nav>
-
-<h1>IMAGEBOARD</h1>
+    
 
 <!-- see vue documentation for v-for -->
     <div id='main'>
-        <div class="container">
-            <div v-for="each in images">
-                <img width="250" height="250":src="each.url" alt="">
-                 <p>{{each.title}}</p>      
-                </div>
-        </div>
- </div>
+        <h1>🎼MUSICimageBOARD🎼</h1>
+        
+<form>
+    <!-- vmodel allows to connect with input fields in script.js -->
+    <input v-model="title" type="text" name="title" placeholder="title">
+    <input v-model="description" type="text" name="description" placeholder="description">
+    <input v-model="username" type="text" name="username" placeholder="username">
+    <input  @change="fileSelectHandler" type="file" name="file" accept="image/*">
+    <button @click.prevent="clickHandler">Submit</button>
+</form>
+
+<div class="container">
+     <div  class="card" v-for="each in images">
+            <img width="250" height="250":src="each.url" alt="">  
+                    <p class="title">{{each.title}}</p>             
+    </div>       
+</div>
+
+
+
+<!-- <div class="container">
+     <div  class="card" v-for="each in images">
+            <img width="250" height="250":src="each.url" alt="">  
+                    <p class="title">{{each.title}}</p>             
+    </div>       
+</div> -->
+
 
     <script src="/js/vue.js"></script>
     <script src="/js/axios.min.js"></script>
