--- a/public/index.html
+++ b/public/index.html
@@ -79,21 +79,20 @@
 </script>
 
 <script type='text/x-template' id="comment">
-        <div class="comment" >
-            <!-- All the modal code has to be inside of one div, you can put other divs in it -->
-            <textarea v-model = "comment" type="text" name="comment" placeholder="share a few words"></textarea>
-            <input v-model = "username"type="text" name="username" placeholder="Your username">
-            <button @click.prevent="commentHandler">Submit</button>   
-        </div>
-
-        <div class="comment-section">
-            <div class="show-comment" v-for="each in comments"> {{each.username}}
-                {{each.comment}}
+        <div>
+            <div class="comment" >
+                <!-- All the modal code has to be inside of one div, you can put other divs in it -->
+                <textarea v-model="comment" type="text" name="comment" placeholder="share a few words"></textarea>
+                <input v-model="username" type="text" name="username" placeholder="Your username">
+                <button @click.prevent="commentHandler">Submit</button>   
+            </div>
+            <div class="comment-section">
+                <div class="show-comment" v-for="each in comments"> {{each.username}}
+                    {{each.comment}}
+                </div>
             </div>
         </div>
-
     </script>
-
      
 
 
