--- a/public/index.html
+++ b/public/index.html
@@ -82,12 +82,12 @@
         <div>
             <div class="comment" >
                 <!-- All the modal code has to be inside of one div, you can put other divs in it -->
-                <input v-model="comment" type="text" name="comment" placeholder="share a few words">
-                <input v-model="username" type="text" name="username" placeholder="Your username">
+                <input v-model="username" type="text" name="username" placeholder="username">
+                <input v-model="comment" type="text" name="comment" placeholder="share a few words">   
                 <button @click.prevent="commentHandler">Submit</button>   
             </div>
             <div class="comment-section">
-                <div class="show-comment" v-for="each in comments"> {{each.username}}
+                <div class="show-comment" v-for="each in comments">Dear {{each.username}} said:
                     {{each.comment}}
                 </div>
             </div>
